--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@
 # in the templates via {{ site.myvariable }}.
 ##################################################################
 
-title: writing that's not language (yet)
+title: Sheridan Feucht
 author: Sheridan Feucht
 # description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "/rereading" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://sfeucht.github.io" # the base hostname & protocol for your site
 
 comment-post: https://docs.google.com/forms/d/e/1FAIpQLSeeWiXR-RYEvaiDPspm_rKmTRbYa7blhXf7QBgbKanxLAf3_Q
@@ -36,7 +36,7 @@ comment-post-fields: [entry.1132147459, entry.406821462, entry.726751318]
 # The order to list your pages in the nav bar, separated by single spaces
 # The first element is whatever you would like index.html to be called
 # All others refer to files with the ".md" extension in your base directory
-# pageorder: "home blog publications software data talks course vita"
+pageorder: "home projects publications vita"
 # # The order to list social media in the footer, separated by single spaces
 # socialorder: "email github googlescholar twitter researchgate"
 
@@ -75,7 +75,7 @@ ghostly:
 # google_analytics: UA-361324-2
 
 # Location the site is to be built. The source can't be inside the destination
-destination: ./_site  #Build into a directory inside the source
+destination: ./docs  #Build into a directory inside the source
 
 # Files or directories inside the destination that you don't want to clobber
 keep_files: [Readme.md, course, doc, figures, images, papers, talks, videos, .gitignore]
