--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ comment-post-fields: [entry.1132147459, entry.406821462, entry.726751318]
 # All others refer to files with the ".md" extension in your base directory
 pageorder: "home projects publications vita"
 # # The order to list social media in the footer, separated by single spaces
-# socialorder: "email github googlescholar twitter researchgate"
+socialorder: "email github researchgate"
 
 # Contact and social media information ... comment out what you don't have
-# email: eponym@jmlilly.net
+email: sheridan_feucht@brown.edu
 # twitter_username: jmlilly
-# github_username:  jonathanlilly
-# researchgate_username: Jonathan_Lilly
+github_username:  sfeucht
+researchgate_username: Sheridan-Feucht
 # googlescholar_id: os-j4rIAAAAJ
 # # Find this from your Google Scholar address, after "user=" and before the "&"
 # # e.g. https://scholar.google.com/citations?user=os-j4rIAAAAJ&hl=en
