--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://example.org/'
+baseURL: 'https://sfeucht.github.io/'
 languageCode: 'en-us'
 title: 'Sheridan Feucht'
 theme:  'anubis'
