--- a/config.yaml
+++ b/config.yaml
@@ -7,9 +7,6 @@ languageCode: "en-us"
 baseUrl: ""
 title: "Sheridan Feucht"
 theme: "anubis"
-paginate: 10
-disqusShortname: "yourdiscussshortname"
-googleAnalytics: "G-12345"
 enableRobotsTXT: true
 
 menu:
@@ -64,12 +61,6 @@ params:
     avatar: true # optional
     avatar-bg: "#f0f0f0" # optional
     feed: false # optional
-  UmamiAnalytics:
-    enabled: true # mandatory
-    dnt: true # optional
-    id: "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx" # mandatory
-    datacache: false # optional
-    url: "https://sfeucht.github.io/umami.js" # mandatory
   graphcommentId: ""
   webmentions:
     url: https://sfeucht.github.io/webmentions/receive
@@ -78,10 +69,13 @@ params:
   social:
   - id: twitter
     url: "https://twitter.com/sheridan_feucht"
+  - id: bluesky
+    url: https://bsky.app/profile/sfeucht.bsky.social
   - id: github
     name: sfeucht
   - id: cv
     url: "/sfeucht_cv.pdf"
+
 
 markup:
   goldmark:
