draft without conclusion

--- a/config.yaml
+++ b/config.yaml
@@ -41,7 +41,7 @@ params:
   tocWordCount: 300 # ...when a post is longer than 300 words
   copyCodeButton: true # true by default
   rssAsSocialIcon: false
-  mathjax: false # https://www.mathjax.org/
+  mathjax: true # https://www.mathjax.org/
   # utteranc.es support
   utterancesRepo: ""  # mandatory
   utterancesTheme: "" # optional
